--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                     <div class="col-lg-10">
                         <h2>If you're looking for a new website you've found the right place!</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                            <a href="https://unsplash.com/">Unsplash</a>
-                            !
+                          Designed to be minimalist, modern, and stylish while being user-friendly and easy to navigate.
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What I Offer</a>
                     </div>
@@ -69,22 +67,20 @@
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                        <h4><strong>Design</strong></h4>
-                        <p class="text-faded mb-0">Freshly designed sites that are minimal yet stylish</p>
+                        <h4><strong>Redesign</strong></h4>
+                        <p class="text-faded mb-0">Give your current site a fresh new design</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Favorited</strong></h4>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-picture"></i></span>
+                        <h4><strong>Images</strong></h4>
                         <p class="text-faded mb-0">
-                            Millions of users
-                            <i class="fas fa-heart"></i>
-                            Start Bootstrap!
+                            Photography availible for site images
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
                         <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <p class="text-faded mb-0">I mustache you a question...contact me below</p>
                     </div>
                 </div>
             </div>
@@ -97,6 +93,7 @@
                     <em>your</em>
                     next website!
                 </h2>
+                <a class="btn btn-primary btn-xl" href="#contact">Contact Me</a>
                 <!-- <a class="btn btn-primary btn-xl" href="">Download Now!</a> -->
             </div>
         </section>
